// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog should render correctly with default props 1`] = `
<Modal
  animationType="fade"
  hardwareAccelerated={false}
  transparent={true}
  visible={true}
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {},
        {},
        [
          {
            "backgroundColor": "rgba(0,0,0,0.5)",
            "flex": 1,
          },
          [
            {
              "alignItems": "center",
              "display": "flex",
              "justifyContent": "center",
            },
            undefined,
          ],
        ],
      ]
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessible={false}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {},
          {},
          {
            "backgroundColor": "#424242",
            "borderRadius": 10,
            "maxWidth": "90%",
            "paddingBottom": 8,
            "zIndex": 100,
          },
        ]
      }
    />
  </View>
</Modal>
`;

exports[`DialogActions should render child correctly 1`] = `
<View
  style={
    [
      {},
      {},
      [
        {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "paddingTop": 5,
        },
        {
          "justifyContent": "flex-end",
        },
        undefined,
      ],
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "paddingHorizontal": 10,
        },
        undefined,
      ]
    }
  >
    <Text
      collapsable={false}
      style={{}}
    >
      Hello
    </Text>
  </View>
</View>
`;

exports[`DialogActions should render correctly with default props 1`] = `
<View
  style={
    [
      {},
      {},
      [
        {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "paddingTop": 5,
        },
        {
          "justifyContent": "flex-end",
        },
        undefined,
      ],
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "paddingHorizontal": 10,
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`DialogContent should render child correctly 1`] = `
<View
  style={
    [
      {},
      {},
      [
        {
          "paddingBottom": 15,
          "paddingHorizontal": 15,
          "paddingTop": 10,
        },
        undefined,
      ],
    ]
  }
>
  <Text
    collapsable={false}
    style={{}}
  >
    Hello
  </Text>
</View>
`;

exports[`DialogContent should render correctly with default props 1`] = `
<View
  style={
    [
      {},
      {},
      [
        {
          "paddingBottom": 15,
          "paddingHorizontal": 15,
          "paddingTop": 10,
        },
        undefined,
      ],
    ]
  }
/>
`;

exports[`DialogContentText should match the snapshot with default props 1`] = `
<Text
  collapsable={false}
  style={
    {
      "color": "#FAFAFA",
      "fontSize": 14,
    }
  }
>
  Mock
</Text>
`;

exports[`DialogTitle should match the snapshot with default props 1`] = `
<Text
  collapsable={false}
  style={
    {
      "color": "#FAFAFA",
      "fontSize": 16,
      "paddingBottom": 8,
      "paddingLeft": 15,
      "paddingRight": 15,
      "paddingTop": 15,
    }
  }
>
  Mock
</Text>
`;
